--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <nav>
         <a href="index.html" class="navbar-brand">Ocean Explorer</a>
         <a href="lessons.html">Lessons</a>
-        <a href="challenges.html">Challenges</a>
+        <a href="Challenges.html">Challenges</a>
         <a href="About_Us.html">About Us</a>
         <a href="Contact_Us.html">Contact Us</a>
     </nav>
@@ -209,7 +209,7 @@
         </div>
         <div>
             <!-- Button for Challenges Page -->
-            <a href="challenges.html" class="btn btn-info">
+            <a href="Challenges.html" class="btn btn-info">
                 <i class="fas fa-trophy"></i> Go to Challenges
             </a>
         </div>
