--- a/Challenges.html
+++ b/Challenges.html
@@ -218,7 +218,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">Ocean Explorer</a>
+        <a class="navbar-brand" href="index.html">Ocean Explorer</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
