--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -38,7 +38,7 @@
     <img src="assets/fish3.png" alt="Fish 3" class="fish fish3">
     <img src="assets/fish4.png" alt="Fish 4" class="fish fish4">
 
-    <div class="container">
+    <div class="container contact-body">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="contact-form">
