--- a/Thankyou.html
+++ b/Thankyou.html
@@ -7,60 +7,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            color: white;
-            background: linear-gradient(to bottom, #00bcd4, #008c96);
-            margin: 0;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-
-        .thank-you-box {
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;
-            padding: 50px;
-            border-radius: 10px;
-            width: 70%;
-            min-height: 300px;
-        }
-
-        .thank-you-box h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-        }
-
-        .thank-you-box p {
-            font-size: 1.2rem;
-        }
-
-        .btn-back {
-            background-color: #ffcc00;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            font-size: 1.1rem;
-            margin-top: 20px;
-            text-decoration: none;
-        }
-
-        .btn-back:hover {
-            background-color: #ffaa00;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div class="thank-you-body">
     <div class="thank-you-box">
         <h1>Thank You for Your Message!</h1>
         <p>We appreciate you reaching out to us. Our team will review your message and get back to you as soon as possible.</p>
         <p>We look forward to connecting with you!</p>
         <a href="index.html" class="btn-back">Back to Home</a>
     </div>
-
+</div>
 </body>
 </html>
