--- a/lesson1.html
+++ b/lesson1.html
@@ -6,172 +6,10 @@
     <title>Lesson 1: Introduction to Variables</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: linear-gradient(to bottom, #f0f8ff, #cce7ff);
-            color: #003366;
-            padding: 0;
-            margin: 0;
-            animation: fadeIn 2s ease-in-out;
-            position: relative;
-            height: 100%;
-            overflow-y: auto; /* Allow scroll for entire body */
-        }
-        .lesson-content {
-            padding: 40px 20px;
-            animation: fadeIn 3s ease-in-out;
-        }
-        .lesson-content h1 {
-            color: #003366;
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 30px;
-            animation: slideInFromTop 1s ease-out;
-        }
-        .lesson-content h3 {
-            color: #003366;
-            font-size: 1.6rem;
-            margin-top: 30px;
-            animation: slideInFromLeft 1s ease-out;
-        }
-        .lesson-content p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-            animation: fadeIn 3s ease-in-out;
-        }
-        .code-snippet {
-            background-color: #003366;
-            color: white;
-            padding: 15px;
-            border-radius: 8px;
-            font-family: monospace;
-            margin: 20px 0;
-        }
-        .interactive-btn {
-            background-color: #ffcc00;
-            color: #003366;
-            padding: 12px 25px;
-            font-size: 18px;
-            font-weight: bold;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            width: 100%;
-            animation: bounceIn 2s ease-in-out;
-        }
-        .interactive-btn:hover {
-            background-color: #ff9900;
-        }
-        .quiz-container {
-            margin-top: 30px;
-        }
-        .quiz-question {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-        .quiz-option {
-            margin: 5px 0;
-            padding: 10px;
-            background-color: #f8f9fa;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            animation: fadeIn 2s ease-in-out;
-        }
-        .quiz-option:hover {
-            background-color: #ffcc00;
-        }
-        .quiz-result {
-            margin-top: 20px;
-            font-size: 18px;
-            font-weight: bold;
-            color: #003366;
-        }
-
-        /* Fish Animation */
-        .fish {
-            position: absolute;
-            opacity: 0.4;
-            z-index: -1; /* Fish stay behind the content */
-            animation: swim 20s infinite linear;
-        }
-
-        .fish1 {
-            width: 8vw;
-            top: 20%;
-            left: -10%;
-            animation-duration: 20s;
-        }
-
-        .fish2 {
-            width: 10vw;
-            top: 40%;
-            left: -15%;
-            animation-duration: 25s;
-        }
-
-        .fish3 {
-            width: 12vw;
-            top: 60%;
-            left: -20%;
-            animation-duration: 30s;
-        }
-
-        .fish4 {
-            width: 7vw;
-            top: 80%;
-            left: -25%;
-            animation-duration: 35s;
-        }
-
-        @keyframes swim {
-            0% { transform: translateX(-10vw); }
-            100% { transform: translateX(110vw); }
-        }
-
-        /* Embedding YouTube Video */
-        iframe {
-            width: 100%;
-            max-width: 800px;
-            height: 450px;
-            margin: 20px 0;
-        }
-
-        /* Styling for correct and incorrect answers */
-        input[type="radio"]:checked + label.correct {
-            background-color: green;
-            color: white;
-            animation: celebration 2s ease-in-out;
-        }
-
-        input[type="radio"]:checked + label.incorrect {
-            background-color: red;
-            color: white;
-            animation: shake 0.5s ease-in-out;
-        }
-
-        /* Celebration Animation */
-        @keyframes celebration {
-            0% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.2); opacity: 0.8; }
-            100% { transform: scale(1); opacity: 1; }
-        }
-
-        /* Shake animation for incorrect answers */
-        @keyframes shake {
-            0% { transform: translateX(0); }
-            25% { transform: translateX(-10px); }
-            50% { transform: translateX(10px); }
-            75% { transform: translateX(-10px); }
-            100% { transform: translateX(0); }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div class="lessons-body">
     <!-- Fish Animation -->
     <img src="assets/fish1.png" class="fish fish1" alt="Fish 1">
     <img src="assets/fish2.png" class="fish fish2" alt="Fish 2">
@@ -180,10 +18,10 @@
 
     <div class="container lesson-content">
         <h1>Lesson 1: Introduction to Variables</h1>
-        <p>In this lesson, you'll learn how to create and use variables in your programs to store and manipulate data.</p>
+        <p class="p-lessons">In this lesson, you'll learn how to create and use variables in your programs to store and manipulate data.</p>
 
         <h3>What is a Variable?</h3>
-        <p>A variable is a container for storing data. In programming, we can use variables to hold values, such as numbers, strings, and more. Let’s see an example:</p>
+        <p class="p-lessons">A variable is a container for storing data. In programming, we can use variables to hold values, such as numbers, strings, and more. Let’s see an example:</p>
 
         <div class="code-snippet">
             <p><strong>Example in Python:</strong></p>
@@ -194,7 +32,7 @@
         </div>
 
         <h3>Your Task:</h3>
-        <p>Try to create a variable and print it. If you’re using Python, use the code above and see the result in your Python environment!</p>
+        <p class="p-lessons">Try to create a variable and print it. If you’re using Python, use the code above and see the result in your Python environment!</p>
 
         <!-- Embedding YouTube Video -->
         <h3>Watch the Video:</h3>
@@ -204,7 +42,7 @@
 
         <h3>Quiz: Test Your Knowledge!</h3>
         <div class="quiz-container">
-            <p class="quiz-question">What is the correct way to declare a variable in Python?</p>
+            <p class="quiz-question p-lessons">What is the correct way to declare a variable in Python?</p>
             <input type="radio" id="answer1" name="quiz" />
             <label for="answer1" class="quiz-option incorrect">var age = 25;</label>
 
@@ -222,9 +60,9 @@
         </a>
     </div>
 
-    <footer>
-        <p>&copy; 2025 Ocean Explorer | All Rights Reserved</p>
-    </footer>
-
+    <div class="text-center">
+        <p class="p-lessons">&copy; 2025 Ocean Explorer | All Rights Reserved</p>
+    </div>
+</div>
 </body>
 </html>
