--- a/lessons.html
+++ b/lessons.html
@@ -85,7 +85,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Programming Academy | All Rights Reserved</p>
+        <p>&copy; 2025 Ocean Explorer | All Rights Reserved</p>
     </footer>
 
 </body>
