--- a/About_Us.html
+++ b/About_Us.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Challenges.html">Challenges</a>
+                    <a class="nav-link" href="Challenges.html"><i class="fas fa-trophy"></i> Challenges</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="lessons.html"><i class="fas fa-book-open"></i> Lessons</a>
