--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Challenges.html">Challenges</a>
+                    <a class="nav-link" href="Challenges.html"><i class="fas fa-trophy"></i> Challenges</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="lessons.html"><i class="fas fa-book-open"></i> Lessons</a>
@@ -55,7 +55,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Programming Academy | All Rights Reserved</p>
+        <p>&copy; 2025 Ocean Explorer | All Rights Reserved</p>
     </footer>
 </body>
 </html>
