--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choose Your Path - Programming Academy</title>
+    <title>Choose Your Path - Ocean Explorer</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -59,7 +59,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2025 Programming Academy | All Rights Reserved</p>
+            <p>&copy; 2025 Ocean Explorer | All Rights Reserved</p>
         </footer>
     </div>
 </body>
